# sunspot

./: .gitignore  README.md
firmware/: jpeg_stream_viewer.py  temp1.c  temp2.c
firmware/CameraWebServer/: CameraWebServer.ino
firmware/rp2040_ov2640/: CMakeLists.txt  image.pio  main.c  ov2640.c  shell.py
firmware/sunspot_v1/: platformio.ini
firmware/sunspot_v1/src/: config.h  lora.cpp  lora.h  main.cpp  ov2640.cpp  ov2640.h  ov2640_init.h
hardware/sunspotv1/: sunspotv1.kicad_pcb  sunspotv1.kicad_prl  sunspotv1.kicad_pro  sunspotv1.kicad_sch
hardware/sunspotv1/production/: designators.csv  positions.csv
hardware/sunspotv2/: fp-info-cache  sunspotv2.kicad_pcb  sunspotv2.kicad_prl  sunspotv2.kicad_pro  sunspotv2.kicad_sch
sunspotv1/: fp-info-cache  sunspotv1.kicad_pcb  sunspotv1.kicad_prl  sunspotv1.kicad_pro  sunspotv1.kicad_sch
sunspotv1/production/: bom.csv  netlist.ipc
